--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 	<![endif]-->
 	<!--[if IE 9 ]><script src="js/ie-matchmedia.js"></script><![endif]-->
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-198389584-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-198389584-1');
+</script>
+
 </head>
 <body>
 <div id="page" data-linkscroll='y'>
