--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Your Landing Page Title</title>
+	<title>madebytoco - design studio</title>
+	<meta name="description" content="Creative design, branding + digital to elevate your business. Visual identity / Packaging / Publication / Motion graphic / User Experince / User Interface / Research / Prototyping">
 
 	<!--pageMeta-->
 
@@ -73,7 +74,7 @@
 							</div><!-- nav-social -->
 
 							<div class="nav-other mr-l-10">
-								<a href="#popup-content" class="btn btn-default mini set-popup"><i class="fa fa-envelope-o mr-r-5"></i> GET IN TOUCH</a>
+								<a href="mailto:madebytoko@gmail.com" class="btn btn-default"><i class="fa fa-envelope-o mr-r-5"></i> GET IN TOUCH</a>
 							</div>
 						</div><!-- /.nav -->
 					</div><!-- /.column -->
@@ -131,30 +132,12 @@
 										</div>
 									</div><!-- / column -->
 
-									<div class="item">
-										<div class="info-obj mr-0 pos-rel img-l g30 small mid">
-											<div class="img txt-dark2"><span class="iconwrp txt-white"><i class="pe-7s-global"></i></span></div>
-											<div class="info">
-												<h3 class="bold-1 fs16 txt-white">WEB DEVELOPMENT</h3>
-												<p class="mr-0 txt-white">Lorem ipsum dolor sit ametconsetetur sadipscing elitr, sed diam nonumy eirmod</p>
-											</div>
-										</div>
-									</div><!-- / column -->
 
-									<div class="item">
-										<div class="info-obj mr-0 pos-rel img-l g20 small mid">
-											<div class="img txt-dark2"><span class="iconwrp txt-white"><i class="pe-7s-paint"></i></span></div>
-											<div class="info">
-												<h3 class="bold-1 fs16 txt-white">PRINT MEDIA</h3>
-												<p class="mr-0 txt-white">Lorem ipsum dolor sit ametconsetetur sadipscing elitr, sed diam nonumy eirmod</p>
-											</div>
-										</div>
-									</div><!-- / column -->
 
 								</div><!-- /.owl-carousel -->
 							</div><!-- /.carousel-widget -->
 							<hr class="dark mr-tb-30 light">
-							<a href="#popup-content" class="btn light btn-default set-popup">Request FREE Quote</a>
+							<a href="mailto:madebytoko@gmail.com" class="btn light btn-default">Request FREE Quote</a>
 						</div>
 					</div>
 				</div><!-- column -->
@@ -166,9 +149,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-01.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">Website design and development</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -181,9 +163,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-02.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">Mobile app UX design</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -196,9 +177,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-03.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">Graphic design - Album cover</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -211,9 +191,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-04.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">User experience and web design</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -295,9 +274,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-05.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">Business card</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -310,9 +288,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-06.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">UX & UI for enterprise software</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -325,9 +302,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-07.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">Logos</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -340,9 +316,8 @@
 								<div class="overlay flex-bl typo-light">
 									<div class="content mr-20 z2">
 										<a href="images/mockup-08.jpg" class="pop-img iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-expand1"></i></a>
-										<a href="#" target="_blank" class="iconwrp sq40 bg-color1 flex-cc fs24 mr-b-20"><i class="pe-7s-exapnd2"></i></a>
-										<h3 class="title mini bold-1">Project name will come</h3>
-										<p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p>
+										<h3 class="title mini bold-1">UI design</h3>
+										<!-- <p class="mr-0 fs12 op-08">Lorem ipsum dolor sit amet consectetur</p> -->
 									</div>
 									<b class="full-wh bg-dark2 op-08 z1 l0"></b>
 								</div>
@@ -364,13 +339,11 @@
 
 				<div class="flex-col-md-7">
 					<h2 class="title fs30 sm-fs24">Need something specific?<br>We might build it!</h2>
-					<p class="title-sub mr-0 sm-mr-b-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum necessitatibus fuga culpa, ipsam at quaerat expedita tempore, totam itaque asperiores</p>
+					<!-- <p class="title-sub mr-0 sm-mr-b-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum necessitatibus fuga culpa, ipsam at quaerat expedita tempore, totam itaque asperiores</p> -->
 				</div><!-- column -->
 
 				<div class="flex-col-md-4 flex-col-md-offset-1 align-c">
-					<h3 class="title mr-0 fs26 sm-fs22">Call us on +44 07481741239</h3>
-					<hr class="light">
-					<a href="#popup-content" class="btn btn-default large block set-popup">Request FREE Quote</a>
+					<a href="mailto:madebytoko@gmail.com" class="btn btn-default large">Request FREE Quote</a>
 				</div><!-- column -->
 
 			</div><!-- row -->
@@ -392,7 +365,7 @@
 				<a href="https://www.instagram.com/madebytoco/" target="_blank"><i class="fa fa-instagram"></i></a>
 			</div><!-- /Social -->
 
-			<p><a href="http://goo.gl/D6tuDk" target="_blank">R.Gen - Landing pages</a> &copy; 2016</p>
+			<p><a href="http://goo.gl/D6tuDk" target="_blank">madebytoco - design studio</a> &copy; 2021</p>
 		</div>
 	</footer><!-- / Footer section -->
 
